--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_sign_in: ^5.2.1
-  firebase_auth: ^3.3.0
-  firebase_core: ^1.10.2
+  firebase_auth: ^4.1.2
+  firebase_core: ^2.2.0
+  firebase_database: ^10.0.5
+  firebase_messaging: ^14.1.0
+  firebase_storage: ^11.0.5
+  firebase_core_platform_interface: ^4.5.2
   get: ^4.5.1
   get_storage: ^2.0.3
   google_fonts: ^2.1.0
